Fix spacing

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ main {
     max-width: 500px;
     margin-top: 32px;
     margin-bottom: 32px;
+    padding: 1rem;
 }
 
 hr {
